@@ -6,23 +6,13 @@ DIST terminus-font-4.38.tar.gz 316507 SHA256 f6f4876a4dabe6a37c270c20bb9e141e38f
 DIST terminus-font-4.39.tar.gz 324890 SHA256 3108383986b365a4b9cc08c31a4195196f6de974d2735d77f6c6efa9feb1f5bf SHA512 d2b1c55584eabf423a455ea11d90ba8037b4e5823c677a8c604de1e41c55d829b743db2d1932cd755064db681fcd0b5be8484439ddde4394955d0af5174ff591 WHIRLPOOL 00f2e84660e492cd0a047fa0d636dda39b48248f0ce490e4b0dac74425d378a657ebe73c7f234d6681a4ae18cd53acf53c2234368e727bd35b370884db4e8d84
 EBUILD terminus-font-4.36.ebuild 2552 SHA256 173d595e5800378c0963e6ec64d0d4fb95903f9008edeabcdbd7ce834ecc90ff SHA512 8d52840b8113a2c7f0780dc137b23caf4b82798420e525b6ed18e138f168ca6d05ddec3aef408557d104a0876930f200a17757e4959c3d55ab4ea70c1b271029 WHIRLPOOL c92b91020cc5fe4ab3e548683a33a9c8ddb79e60741ee7e6c8b6366841e604aa885237660d8c39af71cde0b63e176cd000beeffaf0d65daf357f2bb339b1d486
 EBUILD terminus-font-4.38.ebuild 2304 SHA256 c7dd8cf4473258f79f7b9f0bac047d5f4cbe363c1d5fc91d689d91d58be8b383 SHA512 32de3acc2feca96d1e5fc7ac14c50657181bfe9cf7d6373fb7428131ae63a4b85255bd078a03a1218e0ec7905b123f712a9dd24c68d6be681ef9a7f3ed516eb6 WHIRLPOOL 3602ab179b345a2a12be9e87ac753a095e438b877dbd964e3b8776ac1f423c000686aa9a1357ce7d3f0bff4eaf68bd5204c1bc9ff89314564dbe3082a7d8951a
-EBUILD terminus-font-4.39.ebuild 2625 SHA256 d313ab549e48e90d96f42c5045072d89277907137f70fb976a6a09cce6621c27 SHA512 ab7b952d6801a9b2a35ac813a48b6d83b5ec08720f02181979e76d54b0ca675e36966b64d62ffa5ca42411ee2f4c6222e802394c45e5606589c4fde80ece24e7 WHIRLPOOL 88a8bbb9cb83f471717f9b3a87a33d4f9f54da5ddc60257c63685e074a2f2a90f0cefa45e712537a008ffdee0c4c773ce1da5f36a26b040c5afe0283a8b69553
-MISC ChangeLog 14592 SHA256 5eca69d6f802768b55a120c1dec77ce06e32a82333618bbbb57b6edecd9df404 SHA512 b281160d2464b9d0d563d6c878b69ab9aba07d5123dd835733e8fa18e5210c22bc7b847de6b0eaa1b7794d9c42e1850bcc7793c62bf7da94b94327901a9cde6a WHIRLPOOL 379a070057930ce8ac45ad2f571a055614ca36b3cc470dfd6dd446463a9aae189e107160d77fa0731ab4868f358da8492231f89a835b880dcbe79c9cac947aea
+EBUILD terminus-font-4.39.ebuild 2661 SHA256 abf5d8521f54663e05b78c1f19cc6a2ce8551ae92ba78536eaaaee131d48121b SHA512 947b4e57c2a4314de3c1af434b753cea18aaabece41b12ee8ba415356fc9a9165e17a808b79dc173cdb7a03cb0c42a56762daaab1da9326476fa28177f381002 WHIRLPOOL 4c50b04a2f6617b1af03de9035e91bfe1bac19cf010aac93aaf7cdce6c313cee49b8d6c1432abca5f97e71dabfa3ec90026b7ddfecc78a10b084c5fd1c137034
+MISC ChangeLog 14702 SHA256 d52122bdfa1cc615b3b8bca04ea39916f6fdcd22427c4b75d5f1d1dc36dae439 SHA512 6831ffba6bc46b042bd3501a800e9332f66c5c51cbe6c7c09bbfad2333cbf321ef8b495489ee4aaad933d169cf8434131cab8ce19c337e52154cd1e8323554a0 WHIRLPOOL c6bb21f5bea809b47192ae315deeb70344675c8cf38ceb3c05caa37cf843796e07085f45d28199759ca398b49bb8ad2b189d0829615b4af9b229a1fd9f40ee28
 MISC metadata.xml 1430 SHA256 d482e291cf08a3bc4e4b2cc6157df02def9f683c35234fea5e8fcbb500c0b090 SHA512 e8ff7722b6810604b8a564e3be6a5a972fa96cd639a8445dda14394eaa81c77f41c7b3bdeaf04ad63c6682393dbf24d08032920a62e52fc4cf96b29f3d972023 WHIRLPOOL e6cb694c18142bad1a8b874d896cfe1d5c79d246782f5407a123d1e73e0e33e99ce5dc3ff297b15e3489fcfeb1ceeac3fba2cbd7388d4b4c7e75dcfb3cb894a1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUD01gAAoJEPGu1DbS6WIAGyQQAJY86SemS0Nv3Up8hfY4SpiL
-NOvrvI2r0D9FXjvHnVcX8+WtR9sHFvXX/jziONZpee8Rq9hATBaPW7+BHRp9MFXp
-4KlqFTUk3LDExuDKegXC3lPxtXjaN7xis7FNFuYaimuKc34djvTvHTvERyoRebVs
-59heIu69fb1kLDGv15IGrDcGY0JSv9Xx67nWByvied28MT9xCKAlmcH7RkrvQk5d
-3RSglI1wtiKDlkXLvpv9uXVoTNahN6qiMt+2fIuZsooUChwHtBosaYMTH3wkxJKu
-QGurZTwyElZzA64JQ93JLGpSMik7eS5CNUICLECTl1OjtJkKVTImfqvQMmFMTtlY
-NJ8OLFP8dt+zDo4BwQZ5xgm5cFg/7bENnwlYGsAOoWpd5NTYYoLQfHBXCj8Nw5l/
-j5FpSrYMt6VsVjLzHoj5HBhhrMl4WJXNtUW5xhA01auyOPl0daXVBxbkGJmM4kr/
-ek2U1vDk9jWemQ/fh3DOyMlDCSYt4qzR52pYnq5NnzUcZV6Jen0Cw8UOYCuMr58S
-/wd1hj8FCP0enZ/O8vzp3KBGkUV2hNCMpNfGv3kQHPVr/t8ni/BV42fgzRhMerp5
-YmWVnmo9WYBExeByuGyaCVBrjZOURIYjlItHd3oNhl39p5754Ccg5DKAtF+QkUnZ
-pcFXDWrOxUjDYKS0ALLl
-=L/V0
+iF4EAREIAAYFAlTXu2YACgkQC77qH+pIQ6T/jQEAoAJqbLQCXK1t06DNEq7RgE3D
+bynOYSnwX5BUjBVlsjwA/2g8BX3SyLPAHQGi+INYG+HEfzlhrA95C0YMxc2PSxYk
+=LCWL
 -----END PGP SIGNATURE-----
