@@ -10,4 +10,4 @@ REQUIRED_USE=X? ( pcf )
 SLOT=0
 SRC_URI=mirror://sourceforge/terminus-font/terminus-font-4.39/terminus-font-4.39.tar.gz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	font	37271e0911f39dd15a28adcaf94f6956	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=8348d91624b38b0749739cd2ff21a353
+_md5_=f0c847f1c2858af3fcea27203c59a156
