@@ -1,6 +1,9 @@
 # ChangeLog for media-fonts/terminus-font
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/terminus-font/ChangeLog,v 1.102 2014/09/09 18:56:27 vapier Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/terminus-font/ChangeLog,v 1.103 2015/02/08 19:39:17 floppym Exp $
+
+  08 Feb 2015; Mike Gilbert <floppym@gentoo.org> terminus-font-4.39.ebuild:
+  Install 75-yes-terminus.conf.
 
   09 Sep 2014; Mike Frysinger <vapier@gentoo.org> terminus-font-4.39.ebuild:
   Fix typo in install when USE=-pcf.
